--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           AWS_SECRET_ACEESS_KEY: ${{ secrets.AWS_SECRET_ACEESS_KEY }}
         run: |
           aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin ${{ vars.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-2.amazonaws.com
-          docker build --compress -t ${{ var.ECR_REPO_APP }}:$GITHUB_SHA .
-          docker push ${{ var.ECR_REPO_APP }}:$GITHUB_SHA
-          docker build --compress -t ${{ var.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
-          docker push ${{ var.ECR_REPO_PROXY }}:$GITHUB_SHA
+          docker build --compress -t ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA .
+          docker push ${{ vars.ECR_REPO_APP }}:$GITHUB_SHA
+          docker build --compress -t ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA proxy/
+          docker push ${{ vars.ECR_REPO_PROXY }}:$GITHUB_SHA
